# flowshop-ic

./: .gitignore  CMakeLists.txt  README.md
CPLEX Model/: flowshopschedulingmodel.mod
Code/: Conclusion.cpp  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  NEH.h  Population.cpp  cplexModel.cpp  cplexModel.h  inputData.cpp  inputData.h  main.cpp
Code/GeneticAlgorithm/: Conclusion.cpp  GeneticAlgorithm.cpp  Individual.cpp  Population.cpp
Code/Heuristic/: NEH.cpp
Code/Latex/: ComparisonTable.h  comparisonTable.cpp
Code/TabuSearch/: TabuSearch.cpp
Code/bits/: stdc++.h
Code/cplexModel/: cplexModel.cpp
Code/data/InstanceGenerator/: InstanceGenerator.cpp
Code/inputData/: inputData.cpp
FlowShopScheduling/: .oplproject  .project
Tables/: table_2024-04-09.22-27-15.txt  table_2024-04-10.04-16-45.txt
